# DSV

./: CMakeLists.txt  LICENSE  README.md  docker-compose.yml
cli/: main.c
cli/include/: rpc_client.h
cli/src/: rpc_client.c
common/include/: dsv_consensus.h  dsv_crypto.h  dsv_serialize.h  dsv_types.h  dsv_u320.h
common/src/: dsv_consensus.c  dsv_crypto.c  dsv_serialize.c  dsv_u320.c
deploy/systemd/: dsv-explorer-indexer.service  dsvd.service
docker/: Dockerfile.api  Dockerfile.indexer  Dockerfile.node  Dockerfile.web  nginx.conf
docs/: AUDIT_CHECKLIST.md  CONFIG.md  CRYPTO_NOTES.md  EXPLORER_ARCHITECTURE.md  RELEASE_CHECKLIST.md  RUNBOOK.md  SECURITY.md  THREAT_MODEL.md
explorer/: schema.sql
explorer/api/: main.py  requirements.txt
explorer/indexer/: config.py  indexer.py  requirements.txt
explorer/web/: index.html  package-lock.json  package.json  tailwind.config.js
explorer/web/src/: App.tsx  api.ts  index.css  main.tsx
explorer/web/src/components/: Layout.tsx
explorer/web/src/pages/: AddressPage.tsx  BlockPage.tsx  HomePage.tsx  TransactionPage.tsx
node/: main.c
node/include/: dsv_chain.h  dsv_mempool.h  dsv_p2p.h  dsv_rpc.h  dsv_storage.h
node/src/: dsv_chain.c  dsv_mempool.c  dsv_p2p.c  dsv_rpc.c  dsv_storage.c
scripts/: release.sh  run_tests.sh
tests/: CMakeLists.txt  requirements.txt
tests/explorer/: test_api.py  test_indexer.py
tests/fuzz/: fuzz_block_parse.c  fuzz_explorer_api.py  fuzz_rpc_input.c  fuzz_tx_parse.c
tests/integration/: test_chain.c  test_wallet.c
tests/unit/: test_consensus.c  test_crypto.c  test_serialize.c  test_u320.c
wallet/: main.c
wallet/include/: dsv_wallet.h
wallet/src/: dsv_wallet.c
